--- a/Obtain Coordinates Area.ipynb
+++ b/Obtain Coordinates Area.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Load video\n",
-    "cap = cv2.VideoCapture(\"traffic_video.mp4\")  # Replace \"traffic_video.mp4\" with 0 to use the webcam\n",
+    "cap = cv2.VideoCapture(\"./videos/traffic_video.mp4\")  # Replace \"traffic_video.mp4\" with 0 to use the webcam\n",
     "\n",
     "if not cap.isOpened():\n",
     "    print(\"Error opening the video\")\n",
