--- a/Traffic Violation Detection.ipynb
+++ b/Traffic Violation Detection.ipynb
@@ -506,8 +506,8 @@
     "    clear_license_plates(DB_HOST, DB_USER, DB_PASSWORD, DB_NAME)\n",
     "\n",
     "    # Open the video file\n",
-    "    vid = cv2.VideoCapture('traffic_video.mp4')\n",
-    "    # ! vid = cv2.VideoCapture('video1.mp4')\n",
+    "    vid = cv2.VideoCapture('./videos/traffic_video.mp4')\n",
+    "    # ! vid = cv2.VideoCapture('./videos/video1.mp4')\n",
     "    \n",
     "    # Create detector object\n",
     "    detector = LineDetector()\n",
@@ -585,7 +585,7 @@
    "source": [
     "%%capture\n",
     "# Load the trained Haar Cascade\n",
-    "license_plate_cascade = cv2.CascadeClassifier('car_plate_detector.xml')\n",
+    "license_plate_cascade = cv2.CascadeClassifier('./car_plate_detector.xml')\n",
     "\n",
     "# Create a list to store unique penalized license plate texts\n",
     "penalized_texts = []"
