--- a/Traffic Tracking.ipynb
+++ b/Traffic Tracking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "af524c80",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "model = YOLO('model/yolov8customv2.pt', task=\"detect\")\n",
     "\n",
     "# Set the path to the input video file\n",
-    "video_path = \"videos/Traffic_1.mp4\"\n",
+    "video_path = \"videos/Traffic_8.mp4\"\n",
     "video = cv2.VideoCapture(video_path)  # Initialize video capture object\n",
     "\n",
     "# Dictionary to store the history of object tracks\n",
@@ -164,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mi_entorno",
    "language": "python",
    "name": "python3"
   },
@@ -178,12 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "12028effb1af0cd2244438ff9b17d06bb1d7695ec7a554a144e43ec4b8b79006"
-   }
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
