--- a/Traffic Violation Detection.ipynb
+++ b/Traffic Violation Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "2c0c24b6",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "a1b36845",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "91df4e7c",
    "metadata": {},
    "outputs": [],
@@ -85,17 +85,17 @@
     "    if cv2.countNonZero(red_mask) > 0:\n",
     "        # If red is detected, set text properties and message\n",
     "        text_color = (0, 0, 255)  # Red color for text\n",
-    "        message = \"Detected Signal Status: Stop\"  # Message for red signal\n",
+    "        message = \"Estado semaforo: Stop\"  # Message for red signal\n",
     "        color = 'red'\n",
     "    elif cv2.countNonZero(yellow_mask) > 0:\n",
     "        # If yellow is detected, set text properties and message\n",
     "        text_color = (0, 255, 255)  # Yellow color for text\n",
-    "        message = \"Detected Signal Status: Caution\"  # Message for yellow signal\n",
+    "        message = \"Estado semaforo: Caution\"  # Message for yellow signal\n",
     "        color = 'yellow'\n",
     "    else:\n",
     "        # If neither red nor yellow is detected, assume green signal\n",
     "        text_color = (0, 255, 0)  # Green color for text\n",
-    "        message = \"Detected Signal Status: Go\"  # Message for green signal\n",
+    "        message = \"Estado semaforo: Go\"  # Message for green signal\n",
     "        color = 'green'\n",
     "\n",
     "    # Overlay the detected traffic light status on the main image\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "f0eb359a",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "6b934be1",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "33719c9c",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "13285f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
     "    y_pos = 180\n",
     "\n",
     "    # Add a title to the frame indicating fined license plates\n",
-    "    cv2.putText(frame, 'Fined license plates:', (25, y_pos), font, font_scale, color, font_thickness)\n",
+    "    cv2.putText(frame, 'Matriculas multadas', (25, y_pos), font, font_scale, color, font_thickness)\n",
     "\n",
     "    # Update Y-coordinate for the next line of text\n",
     "    y_pos += 80\n",
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "4801027c",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "a799f760",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "4a3b6c21",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "43e0ec65",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "afa1d813",
    "metadata": {},
    "outputs": [],
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "92fa1bcf",
    "metadata": {},
    "outputs": [],
